// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    name="text"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    type="submit"
  >
    <span>
      Tweet
    </span>
  </button>
</form>
`;

exports[`typing a value and submitting the form will result in a new tweet 1`] = `
<TweetWritingForm
  addTweet={[MockFunction]}
  userId="muhdiekuh"
>
  <form
    onSubmit={[Function]}
  >
    <input
      name="text"
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      <span>
        Tweet
      </span>
    </button>
  </form>
</TweetWritingForm>
`;

exports[`typing a value and submitting the form will result in a new tweet: field filled 1`] = `
<TweetWritingForm
  addTweet={[MockFunction]}
  userId="muhdiekuh"
>
  <form
    onSubmit={[Function]}
  >
    <input
      name="text"
      onChange={[Function]}
      type="text"
      value="Hello World!"
    />
    <button
      type="submit"
    >
      <span>
        Tweet
      </span>
    </button>
  </form>
</TweetWritingForm>
`;
